# llm_debugger

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-pypi-trusted.yml  workflow.yml
llm_logger/: log_viewer.py  logger.py
llm_logger/front_end/: common.ts  index.ts  package-lock.json  package.json  tsconfig.json  viewer.ts
llm_logger/static/: index.js  session.html  style.css  viewer.js
llmdebugger/: cli.py  logger.py  session.py
llmdebugger/front_end/: viewer.ts
llmdebugger/static/: session.html  session.js  style.css  viewer.js
llmdebugger/wrappers/: openai_wrapper.py
