[project]
name = "llmdebugger"
version = "0.1.0"
description = "Lightweight LLM call logger for OpenAI/Anthropic"
authors = [{ name = "Avtar Khalsa" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn"
]

[project.scripts]
llmdebugger = "llmdebugger.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
