[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llmdebugger"
version = "0.1.0"
description = "Lightweight LLM call logger for OpenAI/Anthropic"
authors = [{ name = "Avtar Khalsa", email = "akhalsa43@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0",
    "fastapi",
    "uvicorn"
]

[project.urls]
Homepage = "https://github.com/akhalsa/llmdebugger"

[project.scripts]
llmdebugger = "llmdebugger.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
llmdebugger = ["static/*"]
