[metadata]
name = llmdebugger
version = 0.1.0
description = Lightweight LLM call logger for OpenAI/Anthropic
author = Avtar Khalsa
author_email = akhalsa43@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akhalsa/llmdebugger

[options]
packages = find:
python_requires = >=3.7
install_requires =
    openai>=1.0
